--- a/backend/WebApplication/WebApplication/WebApplication.csproj
+++ b/backend/WebApplication/WebApplication/WebApplication.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0-preview.5.21301.5" />
     <PackageReference Include="MySql.Data" Version="8.0.30" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
