--- a/backend/WebApplication/WebDomain/WebDomain.csproj
+++ b/backend/WebApplication/WebDomain/WebDomain.csproj
@@ -63,7 +63,9 @@
     <Compile Include="Models\CustomerPotentialTypeModel\CreateCustomerPotentialTypeModel.cs" />
     <Compile Include="Models\CustomerPotentialTypeModel\CustomerPotentialTypeModel.cs" />
     <Compile Include="Models\CustomersModel\CreateCustomerModel.cs" />
+    <Compile Include="Models\CustomersModel\CustomerCodeModel.cs" />
     <Compile Include="Models\CustomersModel\CustomerModel.cs" />
+    <Compile Include="Models\CustomersModel\FormCheckExists.cs" />
     <Compile Include="Models\CustomersModel\UpdateCustomerModel.cs" />
     <Compile Include="Models\DepartmentModel\DepartmentModel.cs" />
     <Compile Include="Models\FieldModel\FieldModel.cs" />
